syntax = "proto3";
package coreum.asset.nft.v1;

import "gogoproto/gogo.proto";

import "coreum/asset/nft/v1/params.proto";
import "coreum/asset/nft/v1/nft.proto";

option go_package = "github.com/CoreumFoundation/coreum/x/asset/nft/types";

// GenesisState defines the nftasset module's genesis state.
message GenesisState {
  // class_definitions keep the non-fungible token class definitions state
  repeated ClassDefinition class_definitions = 2 [(gogoproto.nullable) = false];
}
